syntax = "proto3";
package proto.triton;

message CoordinatedSkill {
  int32 id = 1;
  oneof command {
    MoveToFormation move_to_formation = 2;
    Pass pass = 3;
  }
}

message MoveToFormation {

}

message Pass {

}