syntax = "proto3";
package proto.triton;

message IndividualSkill {
  int32 id = 1;
  oneof command {
    GoalKeep goal_keep = 2;
    PathfindToPoint pathfind_to_point = 3;
    ChaseBall chase_ball = 4;
    CatchBall catch_ball = 5;
    KickBallToPoint kick_ball_to_point = 6;
    DribbleBall dribble_ball = 7;
    Shoot shoot = 8;
    Steal steal = 9;
    Juke juke = 10;
  }
}

message GoalKeep {
}

message PathfindToPoint{
}

message ChaseBall {
}

message CatchBall {
}

message KickBallToPoint {
}

message DribbleBall {
}

message Shoot {
}

message Steal {
}

message Juke {
}