syntax = "proto3";
package proto.triton;

message TeamSkill {
  int32 id = 1;
  oneof command {
    DefaultNeutral default_neutral = 2;
    AggressiveNeutral aggressive_neutral = 3;
    DefensiveNeutral defensive_neutral = 4;

    DefaultOffense default_offense = 5;
    AggressiveOffense aggressive_offense = 6;
    DefensiveOffense defensive_offense = 7;

    DefaultDefense default_defense = 8;
    AggressiveDefense aggressive_defense = 9;
    DefensiveDefense defensive_defense = 10;
  }
}

message DefaultNeutral {
}

message AggressiveNeutral {
}

message DefensiveNeutral {
}

message DefaultOffense {
}

message AggressiveOffense {
}

message DefensiveOffense {
}

message DefaultDefense {
}

message AggressiveDefense {
}

message DefensiveDefense {
}